# weasyprint-service

./: .gitignore  .pre-commit-config.yaml  .release-please-config.json  .yamlfix.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  RELEASE.md  docker-compose.yml  entrypoint.sh  gunicorn.conf.py  pyproject.toml  renovate.json  requirements.txt  sonar-project.properties  test.sh  tox.ini  zizmor.yml
.config/: container-structure-test.yaml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  pr.yml  release-please.yml
app/: SvgUtils.py  WeasyprintController.py  WeasyprintServiceApplication.py  attachment_manager.py  attachment_utils.py  chromium_manager.py  constants.py  form_parser.py  html_parser.py  html_utils.py  memory_manager.py  metrics_server.py  notes_processor.py  prometheus_metrics.py  sanitization.py  schemas.py  svg_processor.py  svg_utils.py  vsdx_processor.py  weasyprint_controller.py  weasyprint_pdfa_patch.py  weasyprint_service_application.py
app/resources/: dashboard.html
app/static/: README.md  dashboard.html  openapi.json
docs/: openapi.json
issues/: 1  new
monitoring/: README.md  docker-compose.yml  generate-load.sh  prometheus.yml  restart-monitoring.sh  start-monitoring.sh  stop-monitoring.sh
monitoring/grafana/dashboards/: weasyprint-service.json
monitoring/grafana/provisioning/dashboards/: default.yml
repro/: README.md  gradient.html  repro.py  run.sh
scripts/: generate_openapi.py  load_test.py  precommit_generate_openapi.sh  precommit_grype_scan.sh
tests/: conftest.py  test_app.py  test_attachment_manager.py  test_attachment_utils.py  test_chromium_manager.py  test_container.py  test_container_memory.py  test_dashboard.py  test_form_parser.py  test_gunicorn_config.py  test_html_parser.py  test_html_utils.py  test_logging.py  test_logging_messages.py  test_memory_manager.py  test_metrics_server.py  test_notes_processor.py  test_prometheus_metrics.py  test_sanitization.py  test_scale_factor.py  test_schemas.py  test_static_files.py  test_svg_processor.py  test_svg_utils.py  test_vsdx_processor.py  test_weasyprint_controller.py  test_weasyprint_pdfa_patch.py  test_weasyprint_service_application.py  utils_pdf.py
tests/container/: container-structure-test.yaml
tests/scripts/: test_script.py  test_script.sh
tests/test-data/: html-with-attachments.html  html-with-custom-metadata.html  html-with-svg-and-png-in-tables.html  html-with-unicode-symbols.html  svg-image-as-base64.embedded.html  svg-image-recursive.embedded.html  svg-image-recursive.html  svg-image-without-xmlns.html  svg-image.embedded.html  svg-image.html  test-specification.html  test-svg.html
