[project]
name = "weasyprint-service"
version = "0.0.0"  # the version is controlled by the pipeline
description = "Service for https://github.com/Kozea/WeasyPrint"
authors = [
    {name = "SBB Polarion Team", email = "polarion-opensource@sbb.ch"},
]
license = {text = "Apache-2.0"}
requires-python = ">=3.13"
# Standard [project.dependencies] format - now supported by Renovate with uv
dependencies = [
    "weasyprint==66.0",
    "defusedxml==0.7.1",
    "fastapi==0.121.1",
    "uvicorn==0.38.0",
    "requests==2.32.5",
    "starlette>=0.49,<0.50",
    "python-multipart>=0.0.20,<0.1",
    "beautifulsoup4>=4.13.5,<5",
    "html5lib>=1.1,<2",
    "playwright>=1.49.0,<2",
    "pillow>=12,<13",
    "psutil>=7.1.0,<8",
    "pypdf==6.2.0",
    "prometheus-fastapi-instrumentator>=7.0.0,<8",
]

[project.optional-dependencies]
dev = [
    "pre-commit==4.4.0",
    "ruff==0.14.4",
    "mypy==1.18.2",
    "types-defusedxml==0.7.0.20250822",
    "types-psutil==7.0.0.20251001",
]
test = [
    "tox==4.32.0",
    "docker==7.1.0",
    "pytest==8.4.2",
    "pytest-asyncio>=1.0.0,<2",
    "pymupdf==1.26.6",
    "pypdf==6.2.0",
    "httpx==0.28.1",
    "coverage==7.11.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 240
fix = true
show-fixes = true
exclude = [
    "tests/*"  # Exclude all test files from linting
]

[tool.ruff.lint]
extend-select = [
    # --- Recommended ---
    "E", "W", # pycodestyle errors and warnings
    "F",      # Pyflakes
    "I",      # isort
    "C4",     # flake8-comprehensions
    "C90",    # mccabe
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "S",      # flake8-bandit
    "PL",     # Pylint
    "PTH",    # flake8-pathlib
    "TCH",    # type-checking imports
    "SIM",    # flake8-simplify
    "T20",    # flake8-print
    "ERA",    # eradicate
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101", # No assert rule (bandit)
    "PLR2004", # No magic values (pylint)
    "F405", # undefined-local-with-import-star-usage (pyflakes)
    "F403", # No import * (pyflakes)
]
"scripts/load_test.py" = [
    "T201", # print statements allowed in CLI scripts
    "PLR2004", # magic values allowed (HTTP status codes, percentiles)
    "PLC0415", # import location flexible for optional dependencies
    "C901", # complexity allowed in CLI main function
]

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint.pylint]
max-args = 7

[tool.mypy]
explicit_package_bases = true
disallow_untyped_defs = true
exclude = ["tests/.*", "examples/.*", "scripts/.*"]
install_types = true
non_interactive = true
