[project]
name = "weasyprint-service"
version = "0.0.0"  # the version is controlled by the pipeline
description = "Service for https://github.com/Kozea/WeasyPrint"
authors = [
    {name = "SBB Polarion Team", email = "polarion-opensource@sbb.ch"},
]
license = {text = "Apache-2.0"}
requires-python = ">=3.14"
# Standard [project.dependencies] format - now supported by Renovate with uv
dependencies = [
    "weasyprint==68.0",
    "defusedxml==0.7.1",
    "fastapi==0.128.0",
    "uvicorn==0.40.0",
    "requests==2.32.5",
    "python-multipart==0.0.22",
    "beautifulsoup4==4.14.3",
    "html5lib==1.1",
    "playwright==1.57.0",
    "pillow==12.1.0",
    "psutil==7.2.1",
    "pypdf==6.6.0",
    "prometheus-fastapi-instrumentator==7.1.0",
]

[tool.uv]
# Set to false because this project is an application, not a library
package = false

[dependency-groups]
dev = [
    "pre-commit==4.5.1",
    "ruff==0.14.14",
    "mypy==1.19.1",
    "types-defusedxml==0.7.0.20250822",
    "types-psutil==7.2.1.20260116",
]
test = [
    "tox==4.34.1",
    "tox-uv==1.29.0",
    "docker==7.1.0",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pymupdf==1.26.7",
    "pypdf==6.6.0",
    "httpx==0.28.1",
    "coverage==7.13.2",
]

[tool.ruff]
line-length = 240
fix = true
show-fixes = true
exclude = [
    "tests/*"  # Exclude all test files from linting
]

[tool.ruff.lint]
extend-select = [
    # --- Recommended ---
    "E", "W", # pycodestyle errors and warnings
    "F",      # Pyflakes
    "I",      # isort
    "C4",     # flake8-comprehensions
    "C90",    # mccabe
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "S",      # flake8-bandit
    "PL",     # Pylint
    "PTH",    # flake8-pathlib
    "TCH",    # type-checking imports
    "SIM",    # flake8-simplify
    "T20",    # flake8-print
    "ERA",    # eradicate
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101", # No assert rule (bandit)
    "PLR2004", # No magic values (pylint)
    "F405", # undefined-local-with-import-star-usage (pyflakes)
    "F403", # No import * (pyflakes)
]
"scripts/load_test.py" = [
    "T201", # print statements allowed in CLI scripts
    "PLR2004", # magic values allowed (HTTP status codes, percentiles)
    "PLC0415", # import location flexible for optional dependencies
    "C901", # complexity allowed in CLI main function
]

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint.pylint]
max-args = 7

[tool.mypy]
explicit_package_bases = true
disallow_untyped_defs = true
exclude = ["tests/.*", "examples/.*", "scripts/.*"]
install_types = true
non_interactive = true
